# quizapi

./: pyproject.toml
application/: config.py  db.py  init.py  main.py  routes.py
application/templates/: index.html
application/util/: clean.py
application/util/source/: 10.csv  clean1000.csv
tests/: test_db.py  test_quizapi.py
