[tool.poetry]
name = "quizAPI"
version = "0.1.0"
description = ""
authors = ["bhavin-t <bhavin.tailor@ravelin.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.2"
redis = "^4.0.2"
fakeredis = "^1.7.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
